# aliengo_odometry

./: CMakeLists.txt  README.md  package.xml
config/rviz/: truth_path_config.rviz
shell/lib_install/ipopt/Ipopt_pkg/ThirdParty-ASL/.libs/: libcoinasl.so.2.0.0
shell/lib_install/ipopt/Ipopt_pkg/ThirdParty-ASL/solvers/.deps/: arithchk-arithchk.Po  atof.Plo  auxinfo.Plo  avltree.Plo  bscanf.Plo  com2eval.Plo  comeval.Plo  con1ival.Plo  con2ival.Plo  con2val.Plo  conadj.Plo  conpval.Plo  conscale.Plo  conval.Plo  degree.Plo  derprop.Plo  dtoa1.Plo  duthes.Plo  dynlink.Plo  f_read.Plo  fg_read.Plo  fg_write.Plo  fgh_read.Plo  fpecatch.Plo  fullhes.Plo  func_add.Plo  funcadd1.Plo  g_fmt.Plo  genrowno.Plo  getenv.Plo  getstub.Plo  htcl.Plo  indic_cons.Plo  jac0dim.Plo  jac2dim.Plo  jacdim.Plo  jacinc.Plo  jacinc1.Plo  libnamsave.Plo  mach.Plo  (+42 more)
shell/lib_install/ipopt/Ipopt_pkg/ThirdParty-HSL/.libs/: libcoinhsl.so.2.2.1
shell/lib_install/ipopt/Ipopt_pkg/ThirdParty-Mumps/MUMPS/libseq/.deps/: elapse.Plo  mpic.Plo
shell/lib_install/ipopt/Ipopt_pkg/ThirdParty-Mumps/MUMPS/src/.deps/: dmumps_gpu.Plo  mumps_addr.Plo  mumps_common.Plo  mumps_config_file_C.Plo  mumps_io.Plo  mumps_io_basic.Plo  mumps_io_err.Plo  mumps_io_thread.Plo  mumps_metis.Plo  mumps_metis64.Plo  mumps_metis_int.Plo  mumps_numa.Plo  mumps_pord.Plo  mumps_register_thread.Plo  mumps_save_restore_C.Plo  mumps_scotch.Plo  mumps_scotch64.Plo  mumps_scotch_int.Plo  mumps_thread.Plo  (+1 more)
src/: main.cpp
src/estimator/: estimator.cpp  estimator.h
src/factor/: integration_base.h
src/kalmanFilter/: A1KF.hpp  A1KFCombineLOWithFoot.cpp  A1KFCombineLOWithFoot.h  CMakeLists.txt  filter.hpp
src/legKinematics/: README.md
